feat: generate data commitment in json file

--- a/examples/computation/computation.ipynb
+++ b/examples/computation/computation.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from zkstats.core import prover_gen_settings, setup, prover_gen_proof, verifier_verify, get_data_commitment_maps"
+    "from zkstats.core import prover_gen_settings, setup, prover_gen_proof, verifier_verify, generate_data_commitment"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "source": [
     "scales = [2]\n",
     "selected_columns = ['x', 'y']\n",
-    "commitment_maps = get_data_commitment_maps(data_path, scales)"
+    "generate_data_commitment(data_path, scales, data_commitment_path)"
    ]
   },
   {
@@ -221,7 +221,7 @@
    ],
    "source": [
     "# Verifier verifies\n",
-    "verifier_verify(proof_path, settings_path, vk_path, selected_columns, commitment_maps)"
+    "verifier_verify(proof_path, settings_path, vk_path, selected_columns, data_commitment_path)"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
