--- a/examples/median/median.ipynb
+++ b/examples/median/median.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from zkstats.core import create_dummy, verifier_define_calculation, prover_gen_settings, setup, prover_gen_proof, verifier_verify, get_data_commitment_maps"
+    "from zkstats.core import create_dummy, verifier_define_calculation, prover_gen_settings, setup, prover_gen_proof, verifier_verify, generate_data_commitment"
    ]
   },
   {
@@ -56,7 +56,8 @@
     "# this is private to prover since it contains actual data\n",
     "sel_data_path = os.path.join('prover/sel_data.json')\n",
     "# this is just dummy random value\n",
-    "sel_dummy_data_path = os.path.join('shared/sel_dummy_data.json')"
+    "sel_dummy_data_path = os.path.join('shared/sel_dummy_data.json')\n",
+    "data_commitment_path = os.path.join('shared/data_commitment.json')"
    ]
   },
   {
@@ -85,11 +86,11 @@
    "outputs": [],
    "source": [
     "# use large scale here to get the output really close to the value in dataset, which is important to Median.\n",
-    "# Be careful, since we may need to calculate average of 2 values in case of no middle value in dataset, \n",
+    "# Be careful, since we may need to calculate average of 2 values in case of no middle value in dataset,\n",
     "# this means larger scale can still blow up circuit size, unlike Mode func that scale doesnt affect circuit size much.\n",
     "scales = [7]\n",
     "selected_columns = ['col_name']\n",
-    "commitment_maps = get_data_commitment_maps(data_path, scales)"
+    "generate_data_commitment(data_path, scales, data_commitment_path)"
    ]
   },
   {
@@ -204,7 +205,7 @@
    ],
    "source": [
     "# Verifier verifies\n",
-    "res = verifier_verify(proof_path, settings_path, vk_path, selected_columns, commitment_maps)\n",
+    "res = verifier_verify(proof_path, settings_path, vk_path, selected_columns, data_commitment_path)\n",
     "print(\"Verifier gets result:\", res)"
    ]
   },
@@ -232,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
