--- a/examples/where/where+covariance/where+covariance.ipynb
+++ b/examples/where/where+covariance/where+covariance.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from zkstats.core import create_dummy, verifier_define_calculation, prover_gen_settings, setup, prover_gen_proof, verifier_verify, get_data_commitment_maps"
+    "from zkstats.core import create_dummy, verifier_define_calculation, prover_gen_settings, setup, prover_gen_proof, verifier_verify, generate_data_commitment"
    ]
   },
   {
@@ -50,7 +50,8 @@
     "# this is private to prover since it contains actual data\n",
     "sel_data_path = os.path.join('prover/sel_data.json')\n",
     "# this is just dummy random value\n",
-    "sel_dummy_data_path = os.path.join('shared/sel_dummy_data.json')"
+    "sel_dummy_data_path = os.path.join('shared/sel_dummy_data.json')\n",
+    "data_commitment_path = os.path.join('shared/data_commitment.json')"
    ]
   },
   {
@@ -82,7 +83,7 @@
     "# note scale = 2, or 3 makes it more precise, but too big.\n",
     "scales = [1]\n",
     "selected_columns = ['x', 'y']\n",
-    "commitment_maps = get_data_commitment_maps(data_path, scales)"
+    "generate_data_commitment(data_path, scales, data_commitment_path)"
    ]
   },
   {
@@ -210,7 +211,7 @@
    ],
    "source": [
     "# Verifier verifies\n",
-    "res = verifier_verify(proof_path, settings_path, vk_path, selected_columns, commitment_maps)\n",
+    "res = verifier_verify(proof_path, settings_path, vk_path, selected_columns, data_commitment_path)\n",
     "print(\"Verifier gets result:\", res)"
    ]
   }
