reshape/neg layer, example on2keras,not simplify onnx_loader

--- a/zkstats/onnx2circom/onnx2keras/example/read_keras.ipynb
+++ b/zkstats/onnx2circom/onnx2keras/example/read_keras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,21 +14,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../')\n",
+    "sys.path.append('../../')\n",
     "# import all layers we support\n",
-    "from layers.mathematics_layers import TFAdd, TFSub, TFMul, TFDiv, TFEqual, TFLess, TFGreater,TFWhere, TFNot, TFAnd, TFOr, TFAbs, TFReciprocal, TFSqrt, TFExp, TFLog, TFFloor, TFCeil, TFReduceMax, TFReduceMin, TFReduceSum, TFReduceMean, TFShape, TFConstantOfShape, TFMatMul\n",
-    "from layers.deformation_layers import  TFTranspose, TFGather,TFConcat, TFSplit,TFUnsqueeze, TFSqueeze\n",
-    "from layers.common_layers import TFCast"
+    "from onnx2keras.layers.mathematics_layers import TFAdd, TFSub, TFMul, TFDiv, TFEqual, TFLess, TFGreater,TFWhere, TFNot, TFAnd, TFOr, TFAbs, TFReciprocal, TFSqrt, TFExp, TFLog, TFFloor, TFCeil, TFReduceMax, TFReduceMin, TFReduceSum, TFReduceMean, TFShape, TFConstantOfShape, TFMatMul, TFNeg\n",
+    "from onnx2keras.layers.deformation_layers import  TFTranspose, TFGather,TFConcat, TFSplit,TFUnsqueeze, TFSqueeze, TFReshape\n",
+    "from onnx2keras.layers.common_layers import TFCast"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
     "from keras import backend as K\n",
     "K.clear_session()\n",
     "keras.saving.get_custom_objects().clear()\n",
-    "custom_objects = {\"TFAdd\":TFAdd,\"TFSub\": TFSub,\"TFMul\": TFMul,\"TFDiv\": TFDiv,\"TFEqual\": TFEqual,\"TFLess\": TFLess,\"TFGreater\": TFGreater,\"TFWhere\":TFWhere, \"TFNot\":TFNot, \"TFAnd\":TFAnd,\"TFOr\": TFOr,\"TFAbs\": TFAbs, \"TFReciprocal\":TFReciprocal,\"TFSqrt\": TFSqrt,\"TFExp\": TFExp,\"TFLog\": TFLog,\"TFFloor\": TFFloor,\"TFCeil\": TFCeil,\"TFReduceMax\": TFReduceMax, \"TFReduceMin\":TFReduceMin,\"TFReduceSum\": TFReduceSum,\"TFReduceMean\": TFReduceMean,\"TFShape\": TFShape,\"TFConstantOfShape\": TFConstantOfShape,\"TFMatMul\": TFMatMul,\"TFTranspose\": TFTranspose,\"TFGather\": TFGather,\"TFConcat\":TFConcat,\"TFSplit\": TFSplit,\"TFUnsqueeze\":TFUnsqueeze,\"TFSqueeze\":TFSqueeze, \"TFCast\":TFCast}\n",
+    "custom_objects = {\"TFAdd\":TFAdd,\"TFSub\": TFSub,\"TFMul\": TFMul,\"TFDiv\": TFDiv,\"TFEqual\": TFEqual,\"TFLess\": TFLess,\"TFGreater\": TFGreater,\"TFWhere\":TFWhere, \"TFNot\":TFNot, \"TFAnd\":TFAnd,\"TFOr\": TFOr,\"TFAbs\": TFAbs, \"TFReciprocal\":TFReciprocal,\"TFSqrt\": TFSqrt,\"TFExp\": TFExp,\"TFLog\": TFLog,\"TFFloor\": TFFloor,\"TFCeil\": TFCeil,\"TFReduceMax\": TFReduceMax, \"TFReduceMin\":TFReduceMin,\"TFReduceSum\": TFReduceSum,\"TFReduceMean\": TFReduceMean,\"TFShape\": TFShape,\"TFConstantOfShape\": TFConstantOfShape,\"TFMatMul\": TFMatMul,\"TFTranspose\": TFTranspose,\"TFGather\": TFGather,\"TFConcat\":TFConcat,\"TFSplit\": TFSplit,\"TFUnsqueeze\":TFUnsqueeze,\"TFSqueeze\":TFSqueeze, \"TFCast\":TFCast, \"TFNeg\":TFNeg, \"TFReshape\":TFReshape}\n",
     "\n",
     "\n",
     "with keras.saving.custom_object_scope(custom_objects):\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -163,8 +163,7 @@
       "y:  tensor([[[13.],\n",
       "         [ 4.],\n",
       "         [ 7.]]])\n",
-      "WARNING:tensorflow:5 out of the last 5 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x31301ff40> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 19ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 24ms/step\n"
      ]
     },
     {
@@ -173,7 +172,7 @@
        "array([[[10.]]], dtype=float32)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
