format input to 2d

--- a/zkstats/onnx2circom/onnx2keras/example/read_keras.ipynb
+++ b/zkstats/onnx2circom/onnx2keras/example/read_keras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -50,11 +50,9 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ input_layer (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">InputLayer</span>)        │ (<span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>)              │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
+       "│ input_layer (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">InputLayer</span>)        │ (<span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>)                 │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ tf_gather (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">TFGather</span>)            │ (<span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>)                 │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ tf_unsqueeze (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">TFUnsqueeze</span>)      │ (<span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>)              │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
+       "│ tf_add (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">TFAdd</span>)                  │ (<span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>)                 │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
        "</pre>\n"
       ],
@@ -62,11 +60,9 @@
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ input_layer (\u001b[38;5;33mInputLayer\u001b[0m)        │ (\u001b[38;5;34m1\u001b[0m, \u001b[38;5;34m3\u001b[0m, \u001b[38;5;34m1\u001b[0m)              │             \u001b[38;5;34m0\u001b[0m │\n",
+       "│ input_layer (\u001b[38;5;33mInputLayer\u001b[0m)        │ (\u001b[38;5;34m3\u001b[0m, \u001b[38;5;34m1\u001b[0m)                 │             \u001b[38;5;34m0\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ tf_gather (\u001b[38;5;33mTFGather\u001b[0m)            │ (\u001b[38;5;34m1\u001b[0m, \u001b[38;5;34m1\u001b[0m)                 │             \u001b[38;5;34m0\u001b[0m │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ tf_unsqueeze (\u001b[38;5;33mTFUnsqueeze\u001b[0m)      │ (\u001b[38;5;34m1\u001b[0m, \u001b[38;5;34m1\u001b[0m, \u001b[38;5;34m1\u001b[0m)              │             \u001b[38;5;34m0\u001b[0m │\n",
+       "│ tf_add (\u001b[38;5;33mTFAdd\u001b[0m)                  │ (\u001b[38;5;34m3\u001b[0m, \u001b[38;5;34m1\u001b[0m)                 │             \u001b[38;5;34m0\u001b[0m │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
       ]
      },
@@ -119,11 +115,9 @@
       "All Layer: \n",
       "\n",
       "<InputLayer name=input_layer, built=True>\n",
-      "{'batch_shape': (1, 3, 1), 'dtype': 'float32', 'sparse': False, 'name': 'input_layer'}\n",
-      "<TFGather name=tf_gather, built=True>\n",
-      "{'name': 'tf_gather', 'trainable': True, 'dtype': 'float32', 'tensor_grap': {'input': {'class_name': '__keras_tensor__', 'config': {'shape': [1, 3, 1], 'dtype': 'float32', 'keras_history': ['input_layer', 0, 0]}}, '/Constant_output_0': 0}, 'node_weights': {}, 'node_inputs': ['input', '/Constant_output_0'], 'node_attribute': {'axis': 1}, 'indices': 0, 'axis': 1}\n",
-      "<TFUnsqueeze name=tf_unsqueeze, built=True>\n",
-      "{'name': 'tf_unsqueeze', 'trainable': True, 'dtype': 'float32', 'tensor_grap': {'input': {'class_name': '__keras_tensor__', 'config': {'shape': [1, 3, 1], 'dtype': 'float32', 'keras_history': ['input_layer', 0, 0]}}, '/Constant_output_0': 0, '/Gather_output_0': {'class_name': '__keras_tensor__', 'config': {'shape': [1, 1], 'dtype': 'float32', 'keras_history': ['tf_gather', 0, 0]}}}, 'node_weights': {}, 'node_inputs': ['/Gather_output_0'], 'node_attribute': {'axes': [-1]}, 'axis': -1}\n"
+      "{'batch_shape': (3, 1), 'dtype': 'float32', 'sparse': False, 'name': 'input_layer'}\n",
+      "<TFAdd name=tf_add, built=True>\n",
+      "{'name': 'tf_add', 'trainable': True, 'dtype': 'float32', 'tensor_grap': {'input': {'class_name': '__keras_tensor__', 'config': {'shape': [3, 1], 'dtype': 'float32', 'keras_history': ['input_layer', 0, 0]}}, '/Constant_output_0': 5.0}, 'node_weights': {}, 'node_inputs': ['input', '/Constant_output_0'], 'node_attribute': {}, 'first_operand': {'class_name': '__keras_tensor__', 'config': {'shape': [3, 1], 'dtype': 'float32', 'keras_history': ['input_layer', 0, 0]}}, 'second_operand': 5.0}\n"
      ]
     }
    ],
@@ -150,29 +144,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x:  tensor([[[10.],\n",
-      "         [40.],\n",
-      "         [50.]]])\n",
-      "y:  tensor([[[13.],\n",
-      "         [ 4.],\n",
-      "         [ 7.]]])\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 24ms/step\n"
+      "x:  tensor([[10.],\n",
+      "        [40.],\n",
+      "        [50.]])\n",
+      "y:  tensor([[13.],\n",
+      "        [ 4.],\n",
+      "        [ 7.]])\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 67ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[[10.]]], dtype=float32)"
+       "array([[15.],\n",
+       "       [45.],\n",
+       "       [55.]], dtype=float32)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,11 +176,11 @@
    "source": [
     "# To make sure still get the sam result as onnx.\n",
     "import torch\n",
-    "input1 = torch.tensor([10, 40, 50], dtype = torch.float32).reshape(1,-1,1)\n",
-    "input2 = torch.tensor([13, 4, 7], dtype = torch.float32).reshape(1,-1,1)\n",
-    "# input3 = torch.tensor([3, 14, 7], dtype = torch.float32).reshape(1,-1,1)\n",
-    "x = torch.tensor([10, 40, 50], dtype = torch.float32).reshape(1,-1,1)\n",
-    "y =torch.tensor([13, 4, 7], dtype = torch.float32).reshape(1,-1,1)\n",
+    "input1 = torch.tensor([10, 40, 50], dtype = torch.float32).reshape(-1,1)\n",
+    "input2 = torch.tensor([13, 4, 7], dtype = torch.float32).reshape(-1,1)\n",
+    "# input3 = torch.tensor([3, 14, 7], dtype = torch.float32).reshape(-1,1)\n",
+    "x = torch.tensor([10, 40, 50], dtype = torch.float32).reshape(-1,1)\n",
+    "y =torch.tensor([13, 4, 7], dtype = torch.float32).reshape(-1,1)\n",
     "print(\"x: \", x)\n",
     "print(\"y: \", y)\n",
     "# print('new y: ', np.expand_dims(y, axis=1))\n",
