use key to access column in computation

--- a/examples/1.only_torch/only_torch.ipynb
+++ b/examples/1.only_torch/only_torch.ipynb
@@ -181,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, verifier_model = computation_to_model(computation, precal_witness_path, False,error)\n",
+    "_, verifier_model = computation_to_model(computation, precal_witness_path, False, selected_columns, error)\n",
     "verifier_define_calculation(dummy_data_path, selected_columns, sel_dummy_data_path,verifier_model, verifier_model_path)"
    ]
   },
