--- a/examples/median/median.ipynb
+++ b/examples/median/median.ipynb
@@ -154,7 +154,7 @@
     "# error here in Median only matters in determining the median value in case it doesnt exist in dataset. (Avg of 2 middle values)\n",
     "error = 0.01\n",
     "# Prover/ data owner side\n",
-    "_, prover_model = computation_to_model(computation,precal_witness_path, True, error)\n",
+    "_, prover_model = computation_to_model(computation, precal_witness_path, True, selected_columns, error)\n",
     "\n",
     "prover_gen_settings(data_path, selected_columns, sel_data_path, prover_model,prover_model_path, scales, \"resources\", settings_path)"
    ]
@@ -165,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, verifier_model = computation_to_model(computation, precal_witness_path, False, error)\n",
+    "_, verifier_model = computation_to_model(computation, precal_witness_path, False, selected_columns, error)\n",
     "\n",
     "verifier_define_calculation(dummy_data_path, selected_columns, sel_dummy_data_path, verifier_model, verifier_model_path)"
    ]
