--- a/examples/pvariance/pvariance.ipynb
+++ b/examples/pvariance/pvariance.ipynb
@@ -135,7 +135,7 @@
     "error = 0.01\n",
     "\n",
     "# Prover/ data owner side\n",
-    "_, prover_model = computation_to_model(computation, precal_witness_path, True, error)\n",
+    "_, prover_model = computation_to_model(computation, precal_witness_path, True, selected_columns, error)\n",
     "prover_gen_settings(data_path, selected_columns, sel_data_path, prover_model, prover_model_path, scales, \"resources\", settings_path)\n",
     "\n"
    ]
@@ -147,7 +147,7 @@
    "outputs": [],
    "source": [
     "# Prover/ data owner side\n",
-    "_, verifier_model = computation_to_model(computation, precal_witness_path, False,error)\n",
+    "_, verifier_model = computation_to_model(computation, precal_witness_path, False, selected_columns, error)\n",
     "verifier_define_calculation(dummy_data_path, selected_columns, sel_dummy_data_path,verifier_model, verifier_model_path)"
    ]
   },
