--- a/examples/where/where+geomean/where+geomean.ipynb
+++ b/examples/where/where+geomean/where+geomean.ipynb
@@ -159,7 +159,7 @@
     "\n",
     "error = 0.01\n",
     "\n",
-    "_, prover_model = computation_to_model(computation, precal_witness_path, True, error)\n",
+    "_, prover_model = computation_to_model(computation, precal_witness_path, True, selected_columns, error)\n",
     "prover_gen_settings(data_path, selected_columns, sel_data_path, prover_model, prover_model_path, scales, \"resources\", settings_path)\n"
    ]
   },
@@ -169,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, verifier_model = computation_to_model(computation, precal_witness_path, False,error)\n",
+    "_, verifier_model = computation_to_model(computation, precal_witness_path, False, selected_columns, error)\n",
     "verifier_define_calculation(dummy_data_path, selected_columns, sel_dummy_data_path,verifier_model, verifier_model_path)"
    ]
   },
