--- a/examples/where/where+regression/where+regression.ipynb
+++ b/examples/where/where+regression/where+regression.ipynb
@@ -150,7 +150,7 @@
     "    y = data[1]\n",
     "\n",
     "    filter = (y < 20)\n",
-    "    \n",
+    "\n",
     "    filtered_x = s.where(filter, x)\n",
     "    filtered_y = s.where(filter, y)\n",
     "    return s.linear_regression(filtered_x,filtered_y)\n",
@@ -158,7 +158,7 @@
     "\n",
     "\n",
     "error = 0.05\n",
-    "_, prover_model = computation_to_model(computation, precal_witness_path, True, error)\n",
+    "_, prover_model = computation_to_model(computation, precal_witness_path, True, selected_columns, error)\n",
     "prover_gen_settings(data_path, selected_columns, sel_data_path, prover_model, prover_model_path, scales, \"resources\", settings_path)\n"
    ]
   },
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, verifier_model = computation_to_model(computation, precal_witness_path, False,error)\n",
+    "_, verifier_model = computation_to_model(computation, precal_witness_path, False, selected_columns,error)\n",
     "verifier_define_calculation(dummy_data_path, selected_columns, sel_dummy_data_path,verifier_model, verifier_model_path)"
    ]
   },
