--- a/examples/where/where+stdev/where+stdev.ipynb
+++ b/examples/where/where+stdev/where+stdev.ipynb
@@ -150,7 +150,7 @@
     "    return s.stdev(filtered_x)\n",
     "\n",
     "error = 0.05\n",
-    "_, prover_model = computation_to_model(computation,precal_witness_path, True, error)\n",
+    "_, prover_model = computation_to_model(computation,precal_witness_path, True, selected_columns, error)\n",
     "\n",
     "prover_gen_settings(data_path, selected_columns, sel_data_path, prover_model,prover_model_path, scales, \"resources\", settings_path)"
    ]
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, verifier_model = computation_to_model(computation, precal_witness_path, False, error)\n",
+    "_, verifier_model = computation_to_model(computation, precal_witness_path, False, selected_columns, error)\n",
     "\n",
     "verifier_define_calculation(dummy_data_path, selected_columns, sel_dummy_data_path, verifier_model, verifier_model_path)"
    ]
